--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,6 +1,17 @@
 name: Java CI with Gradle
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+      - testng
+      - junit4
+      
+  pull_request:
+    branches:
+      - master
+      - testng
+      - junit4
 
 jobs:
   build:
